# hiko

./: .gitignore  Cargo.toml  Config.toml  README.md  config.toml
docs/: .gitignore  mkdocs.yml
docs/docs/: index.md
frontend/: .gitignore  next.config.js  package.json  tailwind.config.ts  tsconfig.json
frontend/app/: layout.tsx  muiDarkLoader.tsx  page.tsx  providers.tsx  sidebar.tsx
frontend/app/pages/: overview.tsx  tasks.tsx
src/: lib.rs  main.rs  utils.rs
src/api/: mod.rs
src/config/: database.rs  general.rs  mail.rs  mod.rs  task.rs  test_config.rs
src/config/tests/: mod.rs
src/database/: mod.rs  record.rs  tasks.rs  utils.rs
src/log/: mod.rs
src/mail/: mod.rs
src/mail/templates/: mod.rs  records_warn_notification.rs
src/task/: mod.rs  mod.rs.back  task_list.rs  test.rs  test_task.rs
src/task/tasks/: check_return_code.rs  match_url_content.rs  mod.rs
src/test/: mod.rs  test_task_system.rs
src/worker/: executor.rs  guardian.rs  mod.rs  utils.rs
webUI/: Program.cs  _Imports.razor
webUI/Data/: WeatherForecast.cs  WeatherForecastService.cs
webUI/Pages/: Error.cshtml  Error.cshtml.cs  FetchData.razor  _Host.cshtml
webUI/Properties/: launchSettings.json
webUI/Shared/: MainLayout.razor  NavMenu.razor
