[package]
name = "hiko"
version = "0.1.0"
edition = "2021"

[dependencies]
lettre = "0.11.1"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"

tokio = { version = "1.32.0", features = ["full"] }
toml = "0.8.2"
uuid = { version = "1.4.1", features = ["v4", "fast-rng"] }
axum = "0.6.20"
surrealdb = { version = "1.0.0", features = ["kv-rocksdb"] }
async-trait = "0.1.74"
reqwest = "0.11.22"

# logger
simple_logger = "4.2.0"
chrono = { version = "0.4.31", features = [] }
env_logger = "0.10.0"
log = { version = "0.4.20", features = [] }

# test
tempfile = "3.8.0"