[package]
name = "hiko"
version = "0.1.0"
edition = "2021"

[dependencies]
lettre = "0.11.2"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
clap = { version = "4.4.11", features = ["derive"] }

tokio = { version = "1.34.0", features = ["full"] }
toml = "0.8.8"
uuid = { version = "1.6.1", features = ["v4", "fast-rng", "serde"] }
axum = "0.7.2"
async-trait = "0.1.74"
reqwest = "0.11.22"
sqlx = { version = "0.7.3" , features = ["runtime-tokio", "tls-native-tls", "any"]}

# logger
simple_logger = "4.3.0"
chrono = { version = "0.4.31", features = [] }
log = { version = "0.4.20", features = [] }
fern = { version = "0.6.2" }

# test
tempfile = "3.8.1"