[package]
name = "hiko"
version = "0.1.0"
edition = "2021"

[dependencies]
lettre = { version = "0.11.3", features = ["tokio1", "smtp-transport", "tokio1-native-tls"] }
serde = { version = "1.0.194", features = ["derive"] }
serde_json = "1.0.111"
clap = { version = "4.4.13", features = ["derive"] }

tokio = { version = "1.35.1", features = ["full"] }
toml = "0.8.8"
uuid = { version = "1.6.1", features = ["v4", "fast-rng", "serde"] }
axum = "0.7.3"
reqwest = "0.11.23"
native-tls = "0.2.11"
sqlx = { version = "0.7.3", features = ["runtime-tokio", "tls-native-tls", "mysql"] }

# logger
simple_logger = "4.3.3"
chrono = { version = "0.4.31", features = [] }
log = { version = "0.4.20", features = [] }
fern = { version = "0.6.2" }

# test
tempfile = "3.9.0"